--- a/assets/normalize.css
+++ b/assets/normalize.css
@@ -11,6 +11,9 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Noto Sans,Noto Sans CJK SC,Microsoft YaHei,微软雅黑,SimSun,sans-serif;
+  color: #333333;
 }
 
 /* Sections
