--- a/assets/kite-design-func-color.css
+++ b/assets/kite-design-func-color.css
@@ -1,6 +1,6 @@
 :root {
   --kite-func-color-link: #2B88FE;
   --kite-func-color-success: #51C419;
-  --kite-func-color-warn: #51C419;
+  --kite-func-color-warn: #FAAD15;
   --kite-func-color-error: #F5222D;
 }
