--- a/assets/kite-design-theme-color.css
+++ b/assets/kite-design-theme-color.css
@@ -1,12 +1,22 @@
 :root {
   --kite-theme-color-1: #f0f9ff;
+  --kite-theme-color-1-rgb: 240, 249, 255;
   --kite-theme-color-2: #cfeaff;
+  --kite-theme-color-2-rgb: 207, 234, 255;
   --kite-theme-color-3: #a6d5ff;
+  --kite-theme-color-3-rgb: 166, 213, 255;
   --kite-theme-color-4: #7dbeff;
+  --kite-theme-color-4-rgb: 125, 190, 255;
   --kite-theme-color-5: #54a4ff;
+  --kite-theme-color-5-rgb: 84, 164, 255;
   --kite-theme-color-6: #2b88fe;
+  --kite-theme-color-6-rgb: 43, 136, 254;
   --kite-theme-color-7: #1a66d9;
+  --kite-theme-color-7-rgb: 26, 102, 217;
   --kite-theme-color-8: #0c49b3;
+  --kite-theme-color-8-rgb: 12, 73, 179;
   --kite-theme-color-9: #03318c;
+  --kite-theme-color-9-rgb: 3, 49, 140;
   --kite-theme-color-10: #011f66;
+  --kite-theme-color-10-rgb: 1, 31, 102;
 }
